change builder configuration to set paths for Arch

--- a/etc/kaleidoscope-builder.conf
+++ b/etc/kaleidoscope-builder.conf
@@ -1,5 +1,14 @@
 # -*- shell-script -*-
 
+ARDUINO_PATH=/usr/share/arduino
+ARDUINO_TOOLS_PATH=/usr/share/arduino/tools
+AVR_SIZE=/usr/bin/avr-size
+AVR_NM=/usr/bin/avr-nm
+AVR_OBJDUMP=/usr/bin/avr-objdump
+AVRDUDE=/usr/bin/avrdude
+AVRDUDE_CONF=/etc/avrdude.conf
+AVR_GCC_PREFIX=/usr
+
 ## NEEDS: LIBRARY, SKETCH, ROOT, SOURCEDIR
 ## Should be included when the current directory is the dir of the Sketch.
 
